@@ -27,6 +27,10 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "UsbIo", "UsbIo\UsbIo.vcproj
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "NWinApp", "NWinApp\NWinApp.vcproj", "{E7560C42-6820-413F-BC42-9AF5915A7EC7}"
 EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "TInfo", "TInfo\TInfo.vcproj", "{795A0B0B-69A7-4907-9C2F-EA128B314472}"
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "Exception", "Exception\Exception.vcproj", "{C52FE441-2736-4104-B175-C947A5267190}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Win32 = Debug|Win32
@@ -85,6 +89,14 @@ Global
 		{E7560C42-6820-413F-BC42-9AF5915A7EC7}.Debug|Win32.Build.0 = Debug|Win32
 		{E7560C42-6820-413F-BC42-9AF5915A7EC7}.Release|Win32.ActiveCfg = Release|Win32
 		{E7560C42-6820-413F-BC42-9AF5915A7EC7}.Release|Win32.Build.0 = Release|Win32
+		{795A0B0B-69A7-4907-9C2F-EA128B314472}.Debug|Win32.ActiveCfg = Debug|Win32
+		{795A0B0B-69A7-4907-9C2F-EA128B314472}.Debug|Win32.Build.0 = Debug|Win32
+		{795A0B0B-69A7-4907-9C2F-EA128B314472}.Release|Win32.ActiveCfg = Release|Win32
+		{795A0B0B-69A7-4907-9C2F-EA128B314472}.Release|Win32.Build.0 = Release|Win32
+		{C52FE441-2736-4104-B175-C947A5267190}.Debug|Win32.ActiveCfg = Debug|Win32
+		{C52FE441-2736-4104-B175-C947A5267190}.Debug|Win32.Build.0 = Debug|Win32
+		{C52FE441-2736-4104-B175-C947A5267190}.Release|Win32.ActiveCfg = Release|Win32
+		{C52FE441-2736-4104-B175-C947A5267190}.Release|Win32.Build.0 = Release|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
