@@ -42,4 +42,5 @@ GEN_BIN				= objcopy.exe
 GEN_BIN_OPT			= -I elf32-littlearm -O binary
 
 OBJ_DUMP			= objdump.exe
-OBJ_DUMP_OPT		= -d
+OBJ_DUMP_OPT		= -D
+
