@@ -26,11 +26,11 @@ MainMenu	MENU
 		BEGIN
 			MENUITEM	SEPARATOR
 		END
-		MENUITEM	_T("&Update menu"),					DKM_APP_UPDATE_CONS_MENU
+		MENUITEM	_T("&Update Console Menu"),			DKM_APP_UPDATE_CONS_MENU
 		MENUITEM	SEPARATOR
 		MENUITEM	_T("&Install App. ...\tCTRL+I"),	DKM_APP_INSTALL
 		MENUITEM	_T("&Re-Install App.\tCTRL+R"),		DKM_APP_REINSTALL
-		MENUITEM	_T("Cance&l install\tCTRL+L"),		DKM_APP_CANCEL_INSTALL
+		MENUITEM	_T("Cance&l Install\tCTRL+L"),		DKM_APP_CANCEL_INSTALL
 		MENUITEM	SEPARATOR
 		MENUITEM	_T("&Generate NApplication Project..."),	DKM_GEN_CODE
 		MENUITEM	SEPARATOR
