@@ -485,83 +485,6 @@ void ThdExit()
 	ThdParkThread();
 }
 
-//BOOL ThdWait(
-//			 UINT8_T uiWaitType, 
-//			 UINT8_T uiObjectType, 
-//			 UINT32_T uiObjectId, 
-//			 UINT32_T uiMilliSec
-//			 )
-//{
-//	BOOL		fRes = FALSE;
-//	UINT16_T	uEvtState = 0;
-//	UINT8_T		uThdState = 0;
-//
-//	if ((uiMilliSec < THREAD__MIN_MSEC_SLEEP) ||
-//		(uiMilliSec > THREAD__INFINITE_WAIT))
-//	{
-//		spCurThread->LastError = ERR__INVALID_MILISEC_VALUE;
-//		return FALSE;
-//	}
-//
-//	if (uiWaitType == THREAD_WAIT_TYPE__SLEEP) 
-//	{
-//		if (uiMilliSec >= THREAD__INFINITE_WAIT) {
-//			spCurThread->LastError = ERR__INVALID_MILISEC_VALUE;
-//			return FALSE;
-//		}
-//		spCurThread->Counter = uiMilliSec;
-//		spCurThread->State = THREAD_STATE__SLEEP;
-//	}
-//	else if (uiWaitType == THREAD_WAIT_TYPE__OBJECT)
-//	{
-//		if (uiObjectType == THREAD_WAIT_OBJ__EVENT) 
-//		{
-//			fRes = EvtGetState(uiObjectId, &uEvtState, 0);
-//			if (!fRes) {
-//				return FALSE;
-//			}
-//			if ((uEvtState & EVT__SET_BIT) == EVT__SET_BIT) {
-//				spCurThread->LastError = ERR__EVENT_ALREADY_BEEN_SET;
-//				return FALSE;
-//			}
-//
-//			spCurThread->WaitObjectType = THREAD_WAIT_OBJ__EVENT;
-//		} 
-//		else if (uiObjectType == THREAD_WAIT_OBJ__THREAD) 
-//		{
-//			fRes = ThdGetState(uiObjectId, &uThdState, 0);
-//			if (!fRes) 
-//				return FALSE;
-//			
-//			if ((uThdState == THREAD_STATE__EXIT) ||
-//				(uThdState == THREAD_STATE__TERMINATED))
-//			{
-//				spCurThread->LastError = ERR__INVALID_THREAD_STATE;
-//				return FALSE;
-//			}
-//
-//			spCurThread->WaitObjectType = THREAD_WAIT_OBJ__THREAD;
-//		} 
-//		else 
-//		{
-//			spCurThread->LastError = ERR__INVALID_THREAD_WAIT_OBJ_TYPE;
-//			return FALSE;
-//		}
-//
-//		spCurThread->Counter = uiMilliSec;
-//
-//		spCurThread->WaitObjectId = uiObjectId;
-//		spCurThread->State = THREAD_STATE__WAIT_FOR_OBJECT;
-//	}
-//	else
-//	{
-//		spCurThread->LastError = ERR__INVALID_THREAD_WAIT_TYPE;
-//		return FALSE;
-//	}
-//
-//	return TRUE;
-//}
-
 BOOL ThdWait(
 			 UINT8_T uiWaitType, 
 			 UINT8_T uiObjectType, 
